feat: address review

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -777,10 +777,6 @@
     "    \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
-    "            \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "            \"description\": \"original dataset\",\n",
-    "        },\n",
-    "        {\n",
     "            \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
     "            \"description\": \"original meta data\",\n",
     "        },\n",
@@ -808,7 +804,8 @@
     "        title={ChEMBL Deposited Data Set-AZ dataset},\n",
     "        author={Hersey, Anne},\n",
     "        year={2015},\n",
-    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
+    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk\n",
+    "        }}\"\"\"\n",
     "    ],\n",
     "}"
    ]
@@ -823,6 +820,30 @@
    "outputs": [],
    "source": [
     "fn_meta = \"meta.yaml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "646f2f57-1461-4473-a9ef-0c53e5b78dfe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def str_presenter(dumper, data):\n",
+    "    \"\"\"configures yaml for dumping multiline strings\n",
+    "    Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "    \"\"\"\n",
+    "    if data.count(\"\\n\") > 0:  # check for multiline string\n",
+    "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
+    "    return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
+    "\n",
+    "yaml.add_representer(str, str_presenter)\n",
+    "yaml.representer.SafeRepresenter.add_representer(\n",
+    "    str, str_presenter\n",
+    ")  # to use with safe_dum"
    ]
   },
   {
@@ -915,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -927,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1005,10 +1026,6 @@
     "        \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            {\n",
-    "                \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "                \"description\": \"original dataset\",\n",
-    "            },\n",
-    "            {\n",
     "                \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
     "                \"description\": \"original meta data\",\n",
     "            },\n",
@@ -1036,9 +1053,23 @@
     "            title={ChEMBL Deposited Data Set-AZ dataset},\n",
     "            author={Hersey, Anne},\n",
     "            year={2015},\n",
-    "            institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
+    "            institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk}\n",
+    "            }\"\"\"\n",
     "        ],\n",
     "    }\n",
+    "\n",
+    "    def str_presenter(dumper, data):\n",
+    "        \"\"\"configures yaml for dumping multiline strings\n",
+    "        Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "        \"\"\"\n",
+    "        if data.count(\"\\n\") > 0:  # check for multiline string\n",
+    "            return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
+    "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
+    "    yaml.add_representer(str, str_presenter)\n",
+    "    yaml.representer.SafeRepresenter.add_representer(\n",
+    "        str, str_presenter\n",
+    "    )  # to use with safe_dum\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
     "        yaml.dump(meta, f, sort_keys=False)\n",
