feat: address review

--- a/data/pampa_ncats/example_processing_and_templates.ipynb
+++ b/data/pampa_ncats/example_processing_and_templates.ipynb
@@ -735,10 +735,6 @@
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
-    "            \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
-    "            \"description\": \"tdcommons.ai dataset url\",\n",
-    "        },\n",
-    "        {\n",
     "            \"url\": \"https://journals.sagepub.com/doi/full/10.1177/24725552211017520\",\n",
     "            \"description\": \"corresponding publication\",\n",
     "        },\n",
@@ -748,7 +744,7 @@
     "    \"bibtex\": [\n",
     "        \"\"\"@article{siramshetty2021validating,\n",
     "title={Validating ADME QSAR Models Using Marketed Drugs},\n",
-    "author={Siramshetty, Vishal and Williams, Jordan and Nguyễn, DHắc-Trung and Neyra, Jorge and Southall,\n",
+    "author={Siramshetty, Vishal and Williams, Jordan and Nguyen, DHac-Trung and Neyra, Jorge and Southall,\n",
     "Noel and Math'e, Ewy and Xu, Xin and Shah, Pranav},\n",
     "journal={SLAS DISCOVERY: Advancing the Science of Drug Discovery},\n",
     "volume={26},\n",
@@ -771,6 +767,28 @@
    "outputs": [],
    "source": [
     "fn_meta = \"meta.yaml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b184d7-a0a0-4313-8ea7-fc5f8ffec195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def str_presenter(dumper, data):\n",
+    "    \"\"\"configures yaml for dumping multiline strings\n",
+    "    Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "    \"\"\"\n",
+    "    if data.count(\"\\n\") > 0:  # check for multiline string\n",
+    "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
+    "    return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
+    "\n",
+    "yaml.add_representer(str, str_presenter)\n",
+    "yaml.representer.SafeRepresenter.add_representer(\n",
+    "    str, str_presenter\n",
+    ")  # to use with safe_dum"
    ]
   },
   {
@@ -862,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -874,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -963,10 +981,6 @@
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            {\n",
-    "                \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
-    "                \"description\": \"tdcommons.ai dataset url\",\n",
-    "            },\n",
-    "            {\n",
     "                \"url\": \"https://journals.sagepub.com/doi/full/10.1177/24725552211017520\",\n",
     "                \"description\": \"corresponding publication\",\n",
     "            },\n",
@@ -976,7 +990,7 @@
     "        \"bibtex\": [\n",
     "            \"\"\"@article{siramshetty2021validating,\n",
     "    title={Validating ADME QSAR Models Using Marketed Drugs},\n",
-    "    author={Siramshetty, Vishal and Williams, Jordan and Nguyễn, DHắc-Trung and Neyra, Jorge and Southall,\n",
+    "    author={Siramshetty, Vishal and Williams, Jordan and Nguyen, DHac-Trung and Neyra, Jorge and Southall,\n",
     "    Noel and Math'e, Ewy and Xu, Xin and Shah, Pranav},\n",
     "    journal={SLAS DISCOVERY: Advancing the Science of Drug Discovery},\n",
     "    volume={26},\n",
@@ -987,6 +1001,19 @@
     "    }\"\"\",\n",
     "        ],\n",
     "    }\n",
+    "\n",
+    "    def str_presenter(dumper, data):\n",
+    "        \"\"\"configures yaml for dumping multiline strings\n",
+    "        Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "        \"\"\"\n",
+    "        if data.count(\"\\n\") > 0:  # check for multiline string\n",
+    "            return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
+    "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
+    "    yaml.add_representer(str, str_presenter)\n",
+    "    yaml.representer.SafeRepresenter.add_representer(\n",
+    "        str, str_presenter\n",
+    "    )  # to use with safe_dum\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
     "        yaml.dump(meta, f, sort_keys=False)\n",
