--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1423,9 +1423,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hfdataset",
+   "display_name": "chemnlp",
    "language": "python",
-   "name": "hfdataset"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1437,7 +1437,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "99197aebba4a0a15729e9a2e093487ccaa59e252e46f9644f5ce2641cc66b01f"
+   }
   }
  },
  "nbformat": 4,
