chore: update link setup in transform.py and notebooks

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -876,12 +876,15 @@
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
+    "            \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
+    "            \"description\": \"original data set link\",\n",
+    "        },\n",
+    "        {\n",
     "            \"url\": \"https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642\",\n",
     "            \"description\": \"corresponding publication\",\n",
     "        },\n",
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "    \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{wang2016adme,\n",
     "title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability\n",
@@ -1034,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1046,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1145,12 +1148,15 @@
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            {\n",
+    "                \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
+    "                \"description\": \"original data set link\",\n",
+    "            },\n",
+    "            {\n",
     "                \"url\": \"https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642\",\n",
     "                \"description\": \"corresponding publication\",\n",
     "            },\n",
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "        \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@article{wang2016adme,\n",
     "            title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability\n",
