--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -777,6 +777,10 @@
     "    \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
+    "            \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
+    "            \"description\": \"original dataset link\",\n",
+    "        },\n",
+    "        {\n",
     "            \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
     "            \"description\": \"original meta data\",\n",
     "        },\n",
@@ -798,7 +802,6 @@
     "        },\n",
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@techreport{hersey2015chembl,\n",
     "        title={ChEMBL Deposited Data Set-AZ dataset},\n",
@@ -948,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1026,6 +1029,10 @@
     "        \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            {\n",
+    "                \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
+    "                \"description\": \"original dataset link\",\n",
+    "            },\n",
+    "            {\n",
     "                \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
     "                \"description\": \"original meta data\",\n",
     "            },\n",
@@ -1047,7 +1054,6 @@
     "            },\n",
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@techreport{hersey2015chembl,\n",
     "            title={ChEMBL Deposited Data Set-AZ dataset},\n",
