--- a/data/pampa_ncats/example_processing_and_templates.ipynb
+++ b/data/pampa_ncats/example_processing_and_templates.ipynb
@@ -735,12 +735,15 @@
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
+    "            \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
+    "            \"description\": \"original dataset link\",\n",
+    "        },\n",
+    "        {\n",
     "            \"url\": \"https://journals.sagepub.com/doi/full/10.1177/24725552211017520\",\n",
     "            \"description\": \"corresponding publication\",\n",
     "        },\n",
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "    \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{siramshetty2021validating,\n",
     "title={Validating ADME QSAR Models Using Marketed Drugs},\n",
@@ -880,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -892,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -981,12 +984,15 @@
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            {\n",
+    "                \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
+    "                \"description\": \"original dataset link\",\n",
+    "            },\n",
+    "            {\n",
     "                \"url\": \"https://journals.sagepub.com/doi/full/10.1177/24725552211017520\",\n",
     "                \"description\": \"corresponding publication\",\n",
     "            },\n",
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "        \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@article{siramshetty2021validating,\n",
     "    title={Validating ADME QSAR Models Using Marketed Drugs},\n",
