--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1089,11 +1089,17 @@
     "    ],\n",
     "    \"license\": \"CC BY-NC-SA 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "        \"https://github.com/MobleyLab/FreeSolv\",\n",
-    "        \"https://escholarship.org/uc/item/6sd403pz\",\n",
+    "        {\n",
+    "            \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
+    "            \"description\": \"issue tracker and source data\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://escholarship.org/uc/item/6sd403pz\",\n",
+    "            \"description\": \"repository with data\",\n",
+    "        },\n",
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
+    "f\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{mobley2013experimental,\n",
     "        title={Experimental and calculated small molecule hydration free energies},\n",
@@ -1214,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1226,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1357,11 +1363,16 @@
     "        ],\n",
     "        \"license\": \"CC BY-NC-SA 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "            \"https://github.com/MobleyLab/FreeSolv\",\n",
-    "            \"https://escholarship.org/uc/item/6sd403pz\",\n",
+    "            {\n",
+    "                \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
+    "                \"description\": \"issue tracker and source data\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://escholarship.org/uc/item/6sd403pz\",\n",
+    "                \"description\": \"repository with data\",\n",
+    "            },\n",
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
-    "        \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@article{mobley2013experimental,\n",
     "            title={Experimental and calculated small molecule hydration free energies},\n",
@@ -1423,7 +1434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chemnlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1437,7 +1448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
