--- a/data/Acute_Toxicity_LD50/example_processing_and_templates.ipynb
+++ b/data/Acute_Toxicity_LD50/example_processing_and_templates.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "b39a142e-ccbc-49d2-98b0-a5f9bde9fd27",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|████████████████████████████████████████| 707k/707k [00:00<00:00, 997kiB/s]\n",
+      "100%|████████████████████████████████████████| 707k/707k [00:00<00:00, 998kiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "26d9f62a-07f5-4113-8161-d5dfcf0bfb71",
    "metadata": {
     "tags": []
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
@@ -114,11 +114,11 @@
      "output_type": "stream",
      "text": [
       "total 720K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  1 22:23 data\r\n",
-      "-rw-rw-r-- 1 melo melo 661K مار  1 22:23 data_original.csv\r\n",
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:58 data\r\n",
+      "-rw-rw-r-- 1 melo melo 661K مار  2 16:58 data_original.csv\r\n",
       "-rw-rw-r-- 1 melo melo  39K مار  1 22:23 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.5K مار  1 21:56 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  1 21:56 transform.py\r\n"
+      "-rw-rw-r-- 1 melo melo 1.5K مار  1 22:23 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.8K مار  1 22:23 transform.py\r\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "77f614e7-b133-40bc-8759-2d930e4c120e",
    "metadata": {
     "tags": []
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "8f5a0387-f9e3-4e1a-8d14-5df618195f70",
    "metadata": {
     "tags": []
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "55b0bd63-62a0-469e-9d8a-e9ada3fe01c4",
    "metadata": {
     "scrolled": true,
@@ -256,7 +256,7 @@
        "4                      S=C=Nc1ccc(Br)cc1  2.729  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "ec2458e5-455f-4f03-8ce9-c0d12e9ed371",
    "metadata": {
     "tags": []
@@ -288,7 +288,7 @@
        "['Drug_ID', 'Drug', 'Y']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "28c9b695",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "a46dd8ff-37b3-4894-8226-3bf98226dd09",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "785d37cb-1fb4-4a91-a923-d5a78a37f36a",
    "metadata": {
     "tags": []
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "aaad8f07",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "1bf212cb-1653-457b-9f5d-416d4dd14b53",
    "metadata": {
     "tags": []
@@ -431,7 +431,7 @@
        "4                      S=C=Nc1ccc(Br)cc1           2.729  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "7e746003-cb1f-434f-bba6-00f0c439c4ac",
    "metadata": {
     "tags": []
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
@@ -518,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 661K مار  1 22:23 data_clean.csv\r\n"
+      "-rw-rw-r-- 1 melo melo 661K مار  2 16:58 data_clean.csv\r\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
    "metadata": {
     "tags": []
@@ -635,7 +635,7 @@
        "4                      S=C=Nc1ccc(Br)cc1           2.729  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
@@ -761,7 +761,7 @@
        "4                      S=C=Nc1ccc(Br)cc1           2.729  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
@@ -863,7 +863,7 @@
        "4                      S=C=Nc1ccc(Br)cc1           2.729  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -907,7 +907,7 @@
     "        },\n",
     "        {\n",
     "            \"id\": \"compound_name\",\n",
-    "            \"type\": \"Other\",\n",
+    "            \"type\": \"Synonyms\",\n",
     "            \"description\": \"compound name\",\n",
     "            \"names\": [\n",
     "                \"compound\",\n",
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -1004,7 +1004,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 1.4K مار  1 22:23 meta.yaml\r\n"
+      "-rw-rw-r-- 1 melo melo 1.4K مار  2 16:58 meta.yaml\r\n"
      ]
     }
    ],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1043,7 +1043,7 @@
       "  type: SMILES\r\n",
       "  description: SMILES\r\n",
       "- id: compound_name\r\n",
-      "  type: Other\r\n",
+      "  type: Synonyms\r\n",
       "  description: compound name\r\n",
       "  names:\r\n",
       "  - compound\r\n",
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1186,7 +1186,7 @@
     "                },\n",
     "                {\n",
     "                    \"id\": \"compound_name\",\n",
-    "                    \"type\": \"Other\",\n",
+    "                    \"type\": \"Synonyms\",\n",
     "                    \"description\": \"compound name\",\n",
     "                    \"names\": [\n",
     "                        \"compound\",\n",
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
    "metadata": {
     "tags": []
@@ -1279,12 +1279,12 @@
      "output_type": "stream",
      "text": [
       "total 1.4M\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  1 22:23 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
-      "-rw-rw-r-- 1 melo melo 661K مار  1 22:23 data_clean.csv\r\n",
-      "-rw-rw-r-- 1 melo melo 661K مار  1 22:23 data_original.csv\r\n",
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:58 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
+      "-rw-rw-r-- 1 melo melo 661K مار  2 16:58 data_clean.csv\r\n",
+      "-rw-rw-r-- 1 melo melo 661K مار  2 16:58 data_original.csv\r\n",
       "-rw-rw-r-- 1 melo melo  39K مار  1 22:23 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.5K مار  1 22:23 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.8K مار  1 22:23 transform.py\r\n"
+      "-rw-rw-r-- 1 melo melo 1.5K مار  2 16:58 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.8K مار  2 16:58 transform.py\r\n"
      ]
     }
    ],
